force-app/main/default/objects/CCR_Material__c/CCR_Material__c.object-meta.xml
<CustomObject>
    <description>Created to store information regarding the Device Master Data (catalogue).</description>
    <label>Material</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>