force-app/main/default/objects/CCR_Material__c/fields/CCR_BrandFamily__c.field-meta.xml
<CustomField>
    <fullName>CCR_BrandFamily__c</fullName>
    <description>Brand Family</description>
    <label>Brand Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IQOS</fullName>
            </value>
            <value>
                <fullName>NICOC</fullName>
            </value>
            <value>
                <fullName>SOLAI</fullName>
            </value>
            <value>
                <fullName>UNDEF</fullName>
            </value>
            <value>
                <fullName>VIVID</fullName>
            </value>
            <value>
                <fullName>IQON</fullName>
            </value>
            <value>
                <fullName>VEEV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>