force-app/main/default/objects/CCR_Material__c/fields/CCR_Color__c.field-meta.xml
<CustomField>
    <fullName>CCR_Color__c</fullName>
    <description>Device Color</description>
    <label>Color</label>
    <length>200</length>
    <type>Text</type>
</CustomField>