force-app/main/default/objects/CCR_Material__c/fields/CCR_Description__c.field-meta.xml
<CustomField>
    <fullName>CCR_Description__c</fullName>
    <description>Material description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>