force-app/main/default/objects/CCR_Material__c/fields/CCR_Group__c.field-meta.xml
<CustomField>
    <fullName>CCR_Group__c</fullName>
    <description>Identification code of the group the device belongs to.</description>
    <label>Group</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>