force-app/main/default/objects/CCR_Material__c/fields/CCR_GroupDescription__c.field-meta.xml
<CustomField>
    <fullName>CCR_GroupDescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identification code of the group the device belongs to.</description>
    <label>Group Description</label>
    <referenceTo>CCR_Material__c</referenceTo>
    <relationshipLabel>Materials (Material)</relationshipLabel>
    <relationshipName>Material</relationshipName>
    <type>Lookup</type>
</CustomField>