force-app/main/default/objects/CCR_Material__c/fields/CCR_Material__c.field-meta.xml
<CustomField>
    <fullName>CCR_Material__c</fullName>
    <description>Contains the same value than the name field. The field is used to set the Material/Name as external id</description>
    <externalId>true</externalId>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>