force-app/main/default/objects/CCR_Material__c/fields/CCR_MaterialType__c.field-meta.xml
<CustomField>
    <fullName>CCR_MaterialType__c</fullName>
    <description>Use to filter by the type of records and allow in the case object to view, when searching on the look up of the field Material Group Description, only one record of each  Material Group description</description>
    <label>Type of Record</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Material Group Description</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>