force-app/main/default/objects/CCR_Material__c/fields/CCR_ModelNumber__c.field-meta.xml
<CustomField>
    <fullName>CCR_ModelNumber__c</fullName>
    <description>Model Number</description>
    <label>Model Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>