force-app/main/default/objects/CCR_Material__c/validationRules/CCR_MaterialUniqueName.validationRule-meta.xml
<ValidationRule>
    <fullName>CCR_MaterialUniqueName</fullName>
    <active>true</active>
    <errorConditionFormula>if( 
ISNEW(), 
	(Name = VLOOKUP($ObjectType.CCR_Material__c.Fields.Name ,$ObjectType.CCR_Material__c.Fields.Name , Name)) , 
	(
		ISCHANGED(Name) &amp;&amp; (Name = VLOOKUP($ObjectType.CCR_Material__c.Fields.Name ,$ObjectType.CCR_Material__c.Fields.Name , Name)
	))
)</errorConditionFormula>
    <errorMessage>Material name already exists</errorMessage>
</ValidationRule>