force-app/main/default/objects/CCR_Material__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CCR_MaterialType__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CCR_Description__c</columns>
    <columns>CCR_Group__c</columns>
    <columns>CCR_ModelNumber__c</columns>
    <columns>CCR_BrandFamily__c</columns>
    <columns>CCR_Version__c</columns>
    <columns>CCR_Color__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>